--- a/src/components/elements/Card.scss
+++ b/src/components/elements/Card.scss
@@ -49,6 +49,7 @@
 @media (max-width: 567px) {
   .card-container {
     flex-direction: column;
+    align-items: center;
     width: 90%;
     padding: 0;
 
