--- a/src/components/section/Apresentation.scss
+++ b/src/components/section/Apresentation.scss
@@ -34,7 +34,7 @@
       font-family: "Poppins";
       font-size: 20px;
       font-weight: 200;
-      max-width: 80%;
+      max-width: 90%;
     }
   }
 
